# Rust-Final-Project

./: .gitignore  Cargo.toml  README.md  changelog.txt  config.toml  generate_changelog.sh  setup_git_hook.sh
adr/: choose-ui.md  generate-map.md  organize-robots.md
archives/resource/: gas.rs  mineral.rs  mod.rs
archives/screens/: map.rs  mod.rs
src/: app.rs  counter.rs  game.rs  input.rs  main.rs  menu.rs
src/celestial-body/: traits.rs
src/map/: base.rs  generator.rs  map.rs  mod.rs  modifier.rs  robot.rs  tile_type.rs
src/module/: cargo_expand.rs  mod.rs  traits.rs
src/resource/: antimatter.rs  radioactive.rs  traits.rs
src/ressource/: traits.rs
src/robot/: collector.rs  constructor.rs  explorator.rs  mod.rs  robot.rs  robot_type.rs  scientific.rs  scientist.rs  traits.rs
src/screens/: counter.rs  home.rs  map.rs
src/ui/: mod.rs  ui.rs
src/utils/: config.rs  debug_to_terminal.rs  mod.rs
