[package]
name = "Rust-Final-Project"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
noise = "0.9"
rand = "0.8.5"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
tokio = { version = "1", features = ["full"] }